--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Future of AI in B2B Customer Research - Mo Jafari's Blog</title>
+    <title>the future of ai in b2b customer research - mo's blog</title>
     <link rel="canonical" href="https://www.mohammad.page/blog-post-1.html" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
@@ -41,7 +41,7 @@
       content="https://www.mohammad.page/blog-post-1.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://mohammad.page/og.png" />
+    <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -52,7 +52,7 @@
       name="twitter:description"
       content="Reflections on the evolving role of AI in B2B customer research and where it's heading."
     />
-    <meta name="twitter:image" content="https://mohammad.page/og.png" />
+    <meta name="twitter:image" content="https://www.mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
@@ -63,15 +63,14 @@
       content="#000000"
       media="(prefers-color-scheme: dark)"
     />
-    <style></style>
   </head>
   <body>
     <site-nav></site-nav>
     <noscript>
       <nav class="nav" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="blog.html" aria-current="page">Blog</a>
-        <a href="links.html">Links</a>
+        <a href="index.html">home</a>
+        <a href="blog.html" aria-current="page">blog</a>
+        <a href="links.html">links</a>
       </nav>
     </noscript>
 
@@ -187,7 +186,7 @@
         </p>
       </article>
 
-      <p><a href="blog.html">← Back to blog</a></p>
+      <p><a href="blog.html">← back to blog</a></p>
     </main>
     <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
