--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -17,10 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      From Calls to Clarity: Shipping Insight Podcasts at Retellio - Mohammad
-      Jafari's Blog
-    </title>
+    <title>from calls to clarity: shipping insight podcasts at retellio - mo's blog</title>
     <link rel="canonical" href="https://www.mohammad.page/blog-post-2.html" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
@@ -44,7 +41,7 @@
       content="https://www.mohammad.page/blog-post-2.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://mohammad.page/og.png" />
+    <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -55,7 +52,7 @@
       name="twitter:description"
       content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
     />
-    <meta name="twitter:image" content="https://mohammad.page/og.png" />
+    <meta name="twitter:image" content="https://www.mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
@@ -71,9 +68,9 @@
     <site-nav></site-nav>
     <noscript>
       <nav class="nav" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="blog.html" aria-current="page">Blog</a>
-        <a href="links.html">Links</a>
+        <a href="index.html">home</a>
+        <a href="blog.html" aria-current="page">blog</a>
+        <a href="links.html">links</a>
       </nav>
     </noscript>
 
@@ -234,7 +231,7 @@
         </p>
       </article>
 
-      <p><a href="blog.html">← Back to blog</a></p>
+      <p><a href="blog.html">← back to blog</a></p>
     </main>
     <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
