--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LLMs in Production: What Nobody Tells You - Mohammad Jafari's Blog</title>
+    <title>llms in production: what nobody tells you - mo's blog</title>
     <link rel="canonical" href="https://www.mohammad.page/blog-post-3.html" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
@@ -41,7 +41,7 @@
       content="https://www.mohammad.page/blog-post-3.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://www.mohammad.page/portrait.jpeg" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -52,7 +52,7 @@
       name="twitter:description"
       content="Hard-won lessons from shipping LLM features to real users. The stuff that isn't in the tutorials."
     />
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg" />
+    <meta name="twitter:image" content="https://www.mohammad.page/portrait.jpeg" />
     <meta
       name="theme-color"
       content="#ffffff"
@@ -68,9 +68,9 @@
     <site-nav></site-nav>
     <noscript>
       <nav class="nav" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="blog.html" aria-current="page">Blog</a>
-        <a href="links.html">Links</a>
+        <a href="index.html">home</a>
+        <a href="blog.html" aria-current="page">blog</a>
+        <a href="links.html">links</a>
       </nav>
     </noscript>
 
@@ -91,7 +91,7 @@
               "@type": "WebPage",
               "@id": "https://www.mohammad.page/blog-post-3.html"
             },
-            "image": "https://mohammad.page/portrait.jpeg",
+            "image": "https://www.mohammad.page/portrait.jpeg",
             "description": "Hard-won lessons from shipping LLM features to real users. The stuff that isn't in the tutorials."
           }
         </script>
@@ -207,7 +207,7 @@
         </p>
       </article>
 
-      <p><a href="blog.html">← Back to blog</a></p>
+      <p><a href="blog.html">← back to blog</a></p>
     </main>
     <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
