--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohammad Jafari - Software Developer</title>
+    <title>mohammad jafari - software developer</title>
     <meta
       name="description"
       content="Mohammad Jafari is an experienced software developer specializing in AI, cloud computing, and scalable software solutions."
@@ -57,7 +57,7 @@
     />
     <meta property="og:url" content="https://www.mohammad.page" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://mohammad.page/og.png" />
+    <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mohammad Jafari - Software Developer" />
@@ -65,25 +65,20 @@
       name="twitter:description"
       content="Experienced software developer specializing in AI, cloud computing, and scalable software solutions."
     />
-    <meta name="twitter:image" content="https://mohammad.page/og.png" />
+    <meta name="twitter:image" content="https://www.mohammad.page/og.png" />
 
-    <style>
-      .content {
-        margin-top: 15vh;
-      }
-    </style>
   </head>
   <body>
     <site-nav></site-nav>
     <noscript>
       <nav class="nav" aria-label="Primary">
-        <a href="index.html" aria-current="page">Home</a>
-        <a href="blog.html">Blog</a>
-        <a href="links.html">Links</a>
+        <a href="index.html" aria-current="page">home</a>
+        <a href="blog.html">blog</a>
+        <a href="links.html">links</a>
       </nav>
     </noscript>
 
-    <main class="content">
+    <main class="content home-content">
       <h1 id="greeting" class="stagger stagger-1">hi, i'm mo.</h1>
 
       <p class="stagger stagger-2">
