--- a/links.html
+++ b/links.html
@@ -28,7 +28,7 @@
     />
     <meta property="og:url" content="https://www.mohammad.page/links.html" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://mohammad.page/og.png" />
+    <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Links - Mohammad Jafari" />
@@ -36,7 +36,7 @@
       name="twitter:description"
       content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
     />
-    <meta name="twitter:image" content="https://mohammad.page/og.png" />
+    <meta name="twitter:image" content="https://www.mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
@@ -49,53 +49,23 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Links - Mohammad Jafari</title>
+    <title>links - mohammad jafari</title>
     <meta
       name="description"
       content="Links to Mohammad Jafari's social profiles, playlists, and creative work."
     />
-    <style>
-      .content {
-        margin-top: 10vh;
-      }
-      .link-section {
-        margin-bottom: 30px;
-      }
-      .link-item {
-        margin-bottom: 10px;
-        padding: 8px 0;
-        transition: transform 0.2s ease;
-        border-radius: 3px;
-      }
-      .link-item:hover {
-        transform: translateX(3px);
-      }
-      .link-item a {
-        display: inline-block;
-        padding: 5px 0;
-      }
-      .link-description {
-        color: #666;
-        font-size: 0.9em;
-        margin-left: 10px;
-        transition: color 0.2s ease;
-      }
-      .link-item:hover .link-description {
-        color: #555;
-      }
-    </style>
   </head>
   <body>
     <site-nav></site-nav>
     <noscript>
       <nav class="nav" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="blog.html">Blog</a>
-        <a href="links.html" aria-current="page">Links</a>
+        <a href="index.html">home</a>
+        <a href="blog.html">blog</a>
+        <a href="links.html" aria-current="page">links</a>
       </nav>
     </noscript>
 
-    <main class="content">
+    <main class="content links-content">
       <h1>links</h1>
 
       <p>here are some places you can find me around the web:</p>
