update link description for photography clarity

--- a/links.html
+++ b/links.html
@@ -87,7 +87,7 @@
             rel="noopener noreferrer"
             >instagram</a
           >
-          <span class="link-description">mostly film photography</span>
+          <span class="link-description">mostly photography</span>
         </div>
       </div>
 
