--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mohammad jafari - software developer</title>
+    <title>Mohammad Jafari - Software Engineer, Toronto | Retellio, ex-Nasdaq</title>
     <meta
       name="description"
       content="Mohammad Jafari is an experienced software developer specializing in AI, cloud computing, and scalable software solutions."
@@ -50,7 +50,7 @@
     />
     <link rel="preload" as="image" href="portrait.jpeg" fetchpriority="high" />
 
-    <meta property="og:title" content="Mohammad Jafari - Software Developer" />
+    <meta property="og:title" content="Mohammad Jafari - Software Engineer, Toronto | Retellio, ex-Nasdaq" />
     <meta
       property="og:description"
       content="Experienced software developer specializing in AI, cloud computing, and scalable software solutions."
@@ -60,7 +60,7 @@
     <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mohammad Jafari - Software Developer" />
+    <meta name="twitter:title" content="Mohammad Jafari - Software Engineer, Toronto | Retellio, ex-Nasdaq" />
     <meta
       name="twitter:description"
       content="Experienced software developer specializing in AI, cloud computing, and scalable software solutions."
@@ -181,6 +181,10 @@
           <a href="https://www.linkedin.com/in/mojafarii/" target="_blank">linkedin</a>
         </p>
       </section>
+      <section class="sr-only" aria-label="About Mohammad Jafari">
+        <h2>About Mohammad Jafari</h2>
+        <p>Mohammad Jafari is a software engineer based in Toronto, Canada. He is currently the founding engineer at Retellio, where he built the entire platform from scratch including AWS infrastructure, LLM/RAG pipelines, and integrations with Salesforce, HubSpot, and Gong. Previously, Mohammad was a senior software developer at Nasdaq, where he helped build their first generative AI product, an entity research copilot now used by over 2,000 financial institutions. Before Nasdaq, he worked at Verafin building fraud detection systems. Mohammad studied Computer Science at Memorial University of Newfoundland.</p>
+      </section>
     </main>
     <footer>© 2025 · toronto · ☾</footer>
     <script src="nav.js" defer></script>
@@ -197,13 +201,31 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Mohammad Jafari",
+        "givenName": "Mohammad",
+        "familyName": "Jafari",
+        "additionalName": "Moghaddas",
+        "alternateName": ["Mo Jafari", "Mohammadhossein Moghaddas Jafari", "Mohammadhossein Jafari"],
         "jobTitle": "Founding Engineer",
         "worksFor": {
           "@type": "Organization",
-          "name": "Retellio"
+          "name": "Retellio",
+          "url": "https://retellio.com"
         },
-        "description": "Experienced software developer specializing in AI, cloud computing, and scalable software solutions.",
+        "alumniOf": {
+          "@type": "CollegeOrUniversity",
+          "name": "Memorial University of Newfoundland",
+          "location": "St. John's, Newfoundland, Canada"
+        },
+        "knowsAbout": ["Artificial Intelligence", "LLM", "AWS", "Cloud Computing", "Software Engineering"],
+        "nationality": "Canadian",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Toronto",
+          "addressCountry": "Canada"
+        },
+        "description": "Software engineer based in Toronto. Founding engineer at Retellio, previously senior software developer at Nasdaq building generative AI products.",
         "url": "https://www.mohammad.page",
+        "image": "https://www.mohammad.page/portrait.jpeg",
         "sameAs": [
           "https://www.linkedin.com/in/mojafarii/",
           "https://github.com/mossein",
