--- a/blog-post-6.html
+++ b/blog-post-6.html
@@ -41,7 +41,7 @@
       content="https://www.mohammad.page/blog-post-6.html"
     />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="https://www.mohammad.page/portrait.jpeg" />
+    <meta property="og:image" content="https://www.mohammad.page/og.png" />
     <meta property="og:site_name" content="Mohammad Jafari" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -52,7 +52,7 @@
       name="twitter:description"
       content="2025 was the year of peak AI noise. 2026 will be the year of the hangover. and the return to craftsmanship."
     />
-    <meta name="twitter:image" content="https://www.mohammad.page/portrait.jpeg" />
+    <meta name="twitter:image" content="https://www.mohammad.page/og.png" />
     <meta
       name="theme-color"
       content="#ffffff"
@@ -91,7 +91,7 @@
               "@type": "WebPage",
               "@id": "https://www.mohammad.page/blog-post-6.html"
             },
-            "image": "https://www.mohammad.page/portrait.jpeg",
+            "image": "https://www.mohammad.page/og.png",
             "description": "2025 was the year of peak AI noise. 2026 will be the year of the hangover. and the return to craftsmanship."
           }
         </script>
